# pictxn

./: .gitignore  Cargo.toml  README.md
apps/backend/: Cargo.toml
apps/backend/src/: di.rs  main.rs  server.rs
apps/backend/src/database/: ops.rs
apps/backend/src/database/sqlite/: db.rs  mod.rs
apps/backend/src/domains/: mod.rs
apps/backend/src/domains/cards/: mod.rs
apps/backend/src/domains/content_sources/: id.rs  model.rs
apps/backend/src/domains/files/: hash.rs  id.rs  ops.rs
apps/backend/src/routes/: mod.rs
apps/backend/src/routes/feed/: mod.rs
apps/backend/src/scout/: model.rs  service.rs
apps/backend/src/scout/channels/: ops.rs
apps/backend/src/storage/: native.rs  provider.rs
apps/backend/src/storage/types/: dto.rs  hash.rs  mod.rs
apps/core/: Cargo.toml
apps/core/src/: lib.rs
apps/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: index.css  main.tsx
apps/frontend/src/api/: api.ts
apps/frontend/src/api/feed/: discover.ts
apps/frontend/src/components/: external_card.tsx
apps/frontend/src/models/: external_card.ts  index.ts
apps/frontend/src/routes/: feed.tsx  index.ts
apps/pictxn/: Cargo.toml
apps/pictxn/src/: database.rs  lib.rs  storage.rs  streams.rs
apps/pictxn/src/helpers/: fs.rs  mod.rs
apps/pictxn/src/models/: mod.rs
apps/pictxn/src/models/database/: cards.rs  files.rs  profiles.rs  users.rs
apps/pictxn/src/models/domains/: cards.rs  files.rs  mod.rs  profiles.rs  users.rs
apps/pictxn/src/repositories/: cards.rs  container.rs  files.rs  mod.rs  profiles.rs  users.rs
apps/pictxn/src/types/: files.rs
apps/pictxn/tests/: streams.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/ops/: cards.rs  content_source.rs  files.rs  mod.rs
crates/db/src/sqlite/: cards.rs  content_source.rs  files.rs  mod.rs
crates/ember/: Cargo.toml
crates/ember/src/services/: mod.rs
crates/ember/src/services/feed/: get_external_feed.rs  get_feed.rs  mod.rs
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs  hash.rs  lib.rs  provider.rs  stream.rs
crates/metrics/: Cargo.toml
crates/models/: Cargo.toml
crates/models/src/: cards.rs  content_source.rs  files.rs  lib.rs
crates/pictxn/: Cargo.toml
crates/pictxn-api/: Cargo.toml
crates/pictxn/src/: errors.rs  fs.rs  pictxn.rs
crates/pictxn/src/models/: mod.rs  user.rs
crates/pictxn/src/ports/: user.rs
crates/pictxn/src/services/: mod.rs
crates/pictxn/src/services/internal/: mod.rs
crates/pictxn/src/types/: auth.rs  card.rs  context.rs  file.rs  ids.rs  mod.rs  states.rs  tokens.rs  user.rs
crates/result/: Cargo.toml
crates/result/src/: errors.rs  lib.rs  mappers.rs
crates/scout/: Cargo.toml
crates/scout/src/: errors.rs  lib.rs  provider.rs  url.rs
crates/scout/src/apis/safebooru/: mod.rs  schemas.rs
crates/scout/src/models/: cards.rs  files.rs
crates/scout/src/providers/: mod.rs  safebooru.rs
crates/scout/src/rss/: mod.rs  pinterest.rs
crates/scout/tests/: sb.rs
crates/server/: Cargo.toml
migrations/: 20260128153633_init.sql  20260216131308_add-file-model.sql  20260216131308_init.sql  20260216133222_add-content-source.sql  20260216143759_add-card.sql
pictxn_cache/: Cargo.toml
pictxn_cache/src/: cache.rs  item.rs  lib.rs
pictxn_fs/: Cargo.toml
pictxn_stream/: Cargo.toml
pictxn_stream/src/: error.rs  lib.rs  types.rs
pictxn_stream/tests/: write_buff.rs  write_file.rs  write_str.rs
src/: di.rs  lib.rs  main.rs  server.rs
src/database/: mod.rs  ops.rs  provider.rs
src/database/sqlite/: cards.rs  content_sources.rs  db.rs  external_content.rs  files.rs  mod.rs
src/domains/cards/: id.rs  model.rs  ops.rs
src/domains/content_sources/: ops.rs
src/domains/files/: hash.rs  mod.rs  model.rs
src/result/: actix.rs  errors.rs  mappers.rs  mod.rs
src/routes/feed/: discover_feed.rs  mod.rs
src/scout/: content.rs  mod.rs  pool.rs  service.rs  task.rs
src/scout/channels/: base.rs  mod.rs  safebooru.rs
src/scout/external_content/: id.rs  model.rs  ops.rs
src/scout/external_contents/: model.rs
src/services/feed/: discover_feed.rs  mod.rs
src/storage/: mod.rs  native.rs  ops.rs
src/storage/types/: dto.rs  stream.rs
src/tasks/: host.rs  mod.rs  task.rs
src/util/: time.rs
