[package]
name = "pictxn-backend"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/yixone/pictxn/"

[dependencies]
# Actix
actix-web = "4.11.0"

# Async
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
tokio-util = "0.7.16"
futures = "0.3.31"

# HttpClient
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }

# Serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# DB
sqlx = { version = "0.8.5", features = [
  "uuid",
  "chrono",
  "sqlite",
  "runtime-tokio",
] }

# Utils
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
rand = "0.9.2"
hex = "0.4.3"
sha2 = "0.10.9"

# Tracing
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
