[workspace]
resolver = "2"
members = ["apps/backend"]
default-members = ["apps/backend"]

[workspace.package]
edition = "2024"
repository = "https://github.com/yixone/pictxn/"

[workspace.dependencies]
# Actix
actix-web = "4.11.0"

# Async
async-trait = "0.1.89"
tokio = "1.47.1"
tokio-util = "0.7.16"
futures = "0.3.31"

# HttpClient
reqwest = "0.13.2"

# Serde
serde = "1.0.219"
serde_json = "1.0.140"

# DB
sqlx = "0.8.5"

# Utils
uuid = "1.17.0"
chrono = "0.4.42"
derive_more = "2.0.1"
rand = "0.9.2"
hex = "0.4.3"
sha2 = "0.10.9"

# Tracing
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
