[package]
name = "db"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait.workspace = true

tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }

# SQLX
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

# Domain
models.workspace = true
