[package]
name = "ember"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
# Internal
db.workspace = true
models.workspace = true
scout.workspace = true
result.workspace = true

# Async
tokio = { workspace = true, features = ["macros"] }
futures = { workspace = true }

# Tracing
tracing.workspace = true

# Utils
derive_more = { workspace = true, features = ["from"] }
