[package]
name = "fs"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/fs.rs"
doctest = false

[dependencies]
pictxn.workspace = true

tokio = { workspace = true, features = ["fs", "io-util"] }

async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }

sha2 = { workspace = true }
