[package]
name = "fs"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
futures.workspace = true

# HttpClient
reqwest = { workspace = true }

# Utils
sha2.workspace = true
chrono = { workspace = true }
hex.workspace = true

# Internal
result.workspace = true
