[package]
name = "models"
version = "0.1.0"
edition.workspace = true
repository.workspace = true


[dependencies]
# Serde
serde = { workspace = true, features = ["derive"] }

# DB (For derive)
sqlx = { workspace = true, features = ["uuid", "chrono"] }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
chrono.workspace = true
