[package]
name = "models"
version = "0.1.0"
edition.workspace = true
repository.workspace = true


[dependencies]
# Serde
serde = { workspace = true, features = ["derive"] }

# DB (For derive)
sqlx = { workspace = true, features = ["uuid", "chrono"] }

# Utils
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
