[package]
name = "pictxn"
version = "0.1.0"
repository.workspace = true
edition.workspace = true

[lib]
path = "src/pictxn.rs"
doctest = false

[dependencies]
async-trait = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
derive_more = { workspace = true, features = ["display", "from"] }
chrono = { workspace = true }
rand = { workspace = true }
