[package]
name = "scout"
description = "External APIs content aggregator"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

# Serde
serde = { workspace = true, features = ["derive"] }

# JSON (For RestAPI)
serde_json.workspace = true

# Reqwest
reqwest = { version = "0.13.2", features = ["json", "query"] }

# Tracing
tracing.workspace = true

# Utils
derive_more = { workspace = true, features = ["from"] }
