[package]
name = "scout"
description = "External APIs content aggregator"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
futures = { workspace = true }

# Serde
serde = { workspace = true, features = ["derive"] }

# JSON (For RestAPI)
serde_json.workspace = true

# Reqwest
reqwest = { workspace = true, features = ["json", "query"] }

# Tracing
tracing.workspace = true

# Utils
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true

# Internal
models.workspace = true
result.workspace = true
